--- a/rsvp/admin/templates/admin/base.html
+++ b/rsvp/admin/templates/admin/base.html
@@ -9,7 +9,7 @@
         {% block css %}
             <link href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha256-916EbMg70RQy9LHiGkXzG8hSg9EdNy97GazNG/aiY1w=" crossorigin="anonymous" rel="stylesheet" type="text/css" />
             <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" integrity="sha256-eZrrJcwDc/3uDhsdt61sL2oOBY362qM3lon1gyExkL0=" crossorigin="anonymous" rel="stylesheet" type="text/css" />
-            <link href="{{ static('admin/css/style.css') }}" rel="stylesheet" type="text/css" />
+            <link href="{{ static('admin/css/style.css') }}>?id=1" rel="stylesheet" type="text/css" />
         {% endblock css %}
         {% block inline_css %}{% endblock inline_css %}
     </head>
@@ -48,7 +48,7 @@
             <script src="https://cdnjs.cloudflare.com/ajax/libs/underscore.js/1.8.3/underscore-min.js" integrity="sha256-obZACiHd7gkOk9iIL/pimWMTJ4W/pBsKu+oZnSeBIek=" crossorigin="anonymous" type="text/javascript"></script>
             <script src="https://cdnjs.cloudflare.com/ajax/libs/backbone.js/1.3.3/backbone-min.js" integrity="sha256-0atoj6xVOJUoBM8Vp5PFywwLLE+aNl2svi4Q9UWZ+dQ=" crossorigin="anonymous" type="text/javascript"></script>
             <script src="https://cdnjs.cloudflare.com/ajax/libs/nunjucks/3.0.0/nunjucks.min.js" integrity="sha256-LWvp8rf/ha5W5zb5rGjypfi/b8w5Yo0Lm+W6ccH3ejA=" crossorigin="anonymous" type="text/javascript"></script>
-            <script src="{{ static('js/functions.js') }}" type="text/javascript"></script>
+            <script src="{{ static('js/functions.js') }}?id=1" type="text/javascript"></script>
         {% endblock js %}
         {% block inline_js %}{% endblock inline_js %}
     </body>
