--- a/rsvp/admin/templates/admin/invites.html
+++ b/rsvp/admin/templates/admin/invites.html
@@ -15,6 +15,16 @@
         <div class="progress">
             <div class="progress-bar"></div>
         </div>
+        <div class="row">
+            <div class="col-md-6">
+                <strong>Adults:&nbsp;</strong>
+                <span data-stats="adults"></span>
+            </div>
+            <div class="col-md-6">
+                <strong>Children:&nbsp;</strong>
+                <span data-stats="children"></span>
+            </div>
+        </div>
         <table class="table table-bordered table-striped">
             <thead>
             <tr>
@@ -24,7 +34,7 @@
             </tr>
             <tr>
                 <th>&nbsp;</th>
-                <th>&nbsp;</th>
+                <th>Attending</th>
                 <th>Name</th>
                 <th>Action</th>
             </tr>
