--- a/rsvp/templates/modals/rsvp.html
+++ b/rsvp/templates/modals/rsvp.html
@@ -36,6 +36,15 @@
                         <button type="submit" class="btn btn-primary">Submit</button>
                     </div>
                 </form>
+                <form id="complete_form" autocomplete="off" style="display:none" action="javascript:void(0);">
+                    <input name="invite_id" type="hidden" />
+                    <div class="form-group text-center">
+                        <label><span class="rsvp-attending"></span> out of <span class="rsvp-total"></span> Attending</label>
+                    </div>
+                    <div class="form-group text-center" style="margin-bottom:0;">
+                        <button type="submit" class="btn btn-primary">Make Adjustments</button>
+                    </div>
+                </form>
             </div>
         </div>
     </div>
