--- a/rsvp/templates/sections/party.html
+++ b/rsvp/templates/sections/party.html
@@ -66,7 +66,7 @@
             </div>
             <div class="row">
                 <h3 class="text-center">
-                    Groomsmen coming soon...
+                    Groomsmen coming soon... (whenever Adam gets around to it)
                 </h3>
                 <br /><br /><br />
             </div>
@@ -80,7 +80,7 @@
                         <div class="card-block">
                             <h4 class="card-title">The Ushers: Leah's Brothers</h4>
                             <p class="card-text">
-                                There is the tech-savy brother Ben, the argumentative brother Joe, the forgotten brother Pete, and the favorite brother Dan. (Hover over / Tap image to see names)
+                                There is the tech-savy brother Ben, the argumentative brother Joe, the video-gaming brother Pete, and the favorite brother Dan.
                             </p>
                         </div>
                     </div>
