--- a/rsvp/templates/index.html
+++ b/rsvp/templates/index.html
@@ -83,7 +83,8 @@
         <footer class="footer">
             <div class="footer-content text-center">
                 <div class="container">
-                    <div class="credit">Wedding/RSVP site made by Leah's big brother Ben and her handsomest brother Dan.</div>
+                    <div class="credit">Wedding / RSVP site made by Leah's big brother Ben and her handsomest brother Dan.</div>
+                    <div class="credit">Stories / Bios crafted by Leah's archrival / cousin in law Brian Peloza.</div>
                 </div>
             </div>
         </footer>
